tercera entrega - SEO y SASS

--- a/styles/scss/componentes/_variables.scss
+++ b/styles/scss/componentes/_variables.scss
@@ -5,3 +5,5 @@ $color-boton-hover: rgb(161, 205, 255);
 $color-fuente-boton-hover: rgb(28, 56, 109);
 $color-nav-hover: gold;
 $sombra-nav-hover: rgb(161, 205, 255) 1px 0 10px;
+$sombra-titulos: #FC0 1px 0 10px;
+$sombra-muestras-c: 0px 0px 7px 7px rgb(242, 250, 133);
