--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,19 +21,23 @@ a:link, a:visited {
   color: whitesmoke;
 }
 
-#Btn {
+#Btn, #BtnStores {
   background-color: rgb(28, 56, 109);
   font-weight: bold;
   margin: 5px;
   padding: 5px;
   border-radius: 8px;
 }
-#Btn:hover {
+#Btn:hover, #BtnStores:hover {
   transition: 0.5s;
   transition-timing-function: ease;
   font-size: 110%;
   background-color: rgb(161, 205, 255);
   color: rgb(28, 56, 109);
+}
+
+#BtnStores:hover {
+  font-size: 100%;
 }
 
 nav ul li a:hover {
@@ -49,8 +53,6 @@ nav ul li a:hover {
   color: whitesmoke;
   margin: 20px;
   text-shadow: #FC0 1px 0 10px;
-  /*text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
-  color: rgb(250, 234, 169);*/
 }
 
 #LinksBanner {
@@ -364,7 +366,7 @@ nav ul li a:hover {
 }
 .SeccionSupTest div {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   margin-top: 20px;
 }
@@ -375,7 +377,7 @@ nav ul li a:hover {
 
 #LeyendaVideos {
   margin: 20px;
-  width: 130px;
+  width: 350px;
   padding: 10px;
   text-align: justify;
   color: blanchedalmond;
