--- a/styles/scss/componentes/_seccionSup.scss
+++ b/styles/scss/componentes/_seccionSup.scss
@@ -54,7 +54,7 @@
 
     div {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-items: center;
         margin-top: 20px;
     }
@@ -67,7 +67,7 @@
 
 #LeyendaVideos {
     margin: 20px;
-    width: 130px;
+    width: 350px;
     padding: 10px;
     text-align: justify;
     color: blanchedalmond;
