--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -109,6 +109,7 @@ nav ul li a:hover {
 
 /* HEADERS */
 .Header {
+  z-index: 1;
   grid-area: Header;
   background-color: rgb(5, 57, 153);
   display: flex;
@@ -451,20 +452,21 @@ nav ul li a:hover {
 
 .MuestrasC {
   display: flex;
-  flex-direction: row;
+  /*flex-direction: row;*/
   justify-content: space-around;
   flex-wrap: wrap;
   background-color: rgb(161, 205, 255);
-  text-align: center;
   padding: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 20px;
 }
-.MuestrasC img {
-  position: sticky;
+.MuestrasC div img {
+  position: relative;
+  z-index: 0;
+  margin: 5px;
   filter: grayscale(80%);
 }
-.MuestrasC img:hover {
+.MuestrasC div img:hover {
   transition: 0.5s;
   transition-timing-function: ease;
   filter: grayscale(0%);
