--- a/styles/scss/componentes/_seccionInf.scss
+++ b/styles/scss/componentes/_seccionInf.scss
@@ -1,4 +1,3 @@
-
 .SeccionInf {
     font-family: 'Ultra', serif;
     color: rgb(5, 57, 153);
@@ -53,23 +52,26 @@
 
 .MuestrasC {
     display: flex;
-    flex-direction: row;
+    /*flex-direction: row;*/
     justify-content: space-around;
     flex-wrap: wrap;
     background-color: rgb(161, 205, 255);
-    text-align: center;
     padding: 20px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 20px;
 
-    img {
-        position: sticky;
-        filter: grayscale(80%);
+    div {
+        img {
+            position: relative;
+            z-index: 0;
+            margin: 5px;
+            filter: grayscale(80%);
 
-        &:hover {
-            transition: 0.5s;
-            transition-timing-function: ease;
-            filter: grayscale(0%);
+            &:hover {
+                transition: 0.5s;
+                transition-timing-function: ease;
+                filter: grayscale(0%);
+            }
         }
     }
 }
