--- a/styles/scss/componentes/_seccionSup.scss
+++ b/styles/scss/componentes/_seccionSup.scss
@@ -88,4 +88,11 @@
 
 #IngresarCorreo {
     margin-bottom: 20px;
+};
+
+#FormCompra {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
 }
