--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -64,6 +64,8 @@ nav ul li a:hover {
   margin: 2px;
 }
 
+
+
 * textarea {
   margin-top: 8px;
   margin-bottom: 8px;
@@ -107,6 +109,26 @@ nav ul li a:hover {
   border-radius: 20px;
 }
 
+
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .popup-container {
   display: none;
   position: fixed;
@@ -115,6 +137,8 @@ nav ul li a:hover {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  animation: fadeIn 0.5s ease-in-out;
+  z-index: 99999;
 }
 
 .popup-content {
@@ -129,7 +153,7 @@ nav ul li a:hover {
   max-width: 900px; /* Límite máximo del ancho del popup */
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   grid-template-columns: 1fr; /* Dividir en dos columnas */
   grid-gap: 20px; /* Espacio entre columnas */
   margin: 0 auto; /* Centra horizontalmente el popup */
@@ -164,6 +188,112 @@ nav ul li a:hover {
   font-size: 40px;
   color: whitesmoke;
   font-weight: lighter;
+  z-index: 99999;
+  pointer-events: auto;
+}
+
+.popupCarrito {
+  text-align: center;
+  pointer-events: auto;
+  animation: fadeIn 1s ease-in-out;
+}
+
+#carritoPopup {
+  display: none;
+  opacity: 80%;
+  /*font-family: "Ultra", serif;*/
+  font-size: 15px;
+  color: whitesmoke;
+  font-weight: lighter;
+  position: fixed;
+  bottom: 5px;
+  right: 5px;
+  background-color: rgb(28, 56, 109);
+  padding: 10px;
+  border: 1px solid rgb(28, 56, 109);
+  box-shadow: 0 20px 100px rgb(28, 56, 109);
+  z-index: 99999;
+  pointer-events: auto;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  animation: fadeIn 1s ease-in-out;
+}
+
+#btnCerrarCarrito {
+  
+}
+
+.btnMinMax {
+  width: 25px;
+  height: 23px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.btnMas {
+width: 20px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.btnMenos {
+  width: 20px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.buttonNuevo {
+  background: #2B2D2F;
+  height: 60px;
+  width: 200px;
+  text-align: center;
+  position: absolute;
+  top: 88%;
+  transform: translateY(-50%);
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.textoNuevo {
+  font: bold 1.25rem/1 poppins;
+  color: #71DFBE;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-52%);
+  left: 0;
+  right: 0;
+}
+
+.progress-bar {
+  position: absolute;
+  height: 10px;
+  width: 0;
+  right: 0;
+  top: 50%;
+  left: 50%;
+  border-radius: 200px;
+  transform: translateY(-50%) translateX(-50%);
+  background: lighten(#2B2D2F, 15%);
+}
+
+svg {
+  width: 30px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  left: 50%;
+  right: 0;
+}
+
+.check {
+  fill: none;
+  stroke: #FFFFFF;
+  stroke-width: 3;
+  stroke-linecap: round;
+  stroke-linejoin: round;
 }
 
 
@@ -520,6 +650,9 @@ nav ul li a:hover {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 20px;
 }
+.MuestrasC div {
+  text-align: center;
+}
 .MuestrasC div img {
   position: relative;
   z-index: 0;
@@ -742,6 +875,19 @@ justify-content: space-around;
   font-size: 105%;
   transition: 0.5s;
   transition-timing-function: ease;
+}
+
+.agregaCarrito {
+  font-weight: bold;
+  color: blanchedalmond;
+  text-shadow: rgb(16, 13, 202) 1px 0 10px;
+  &:hover {
+      color: rgb(5, 37, 182);
+      text-shadow: #FC0 1px 0 10px;
+      font-size: 115%;
+      transition: 0.5s;
+      transition-timing-function: ease;
+  }
 }
 
 /* MEDIA QUERIES */
